# Scriptorium

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements-docling.txt  requirements-ocr.txt  requirements-opendataloader.txt  requirements-relation-ranker.txt  requirements-semantic-order.txt  requirements-surya.txt  requirements.txt
docs/: external-benchmarks.md  external-benchmarks.zh-CN.md  implementation-notes.md  implementation-notes.zh-CN.md  optimization-roadmap.md  optimization-roadmap.zh-CN.md
tests/: test_annotations.py  test_benchmark.py  test_bipartite_matching.py  test_browser_launch.py  test_chunkr_benchmark.py  test_chunkr_order_ranker.py  test_comphrdoc_benchmark.py  test_docling_provider.py  test_floating_ranker.py  test_gallery_demo.py  test_geometry.py  test_graph_hierarchy_materialize.py  test_graph_model.py  test_hierarchical_order.py  test_hierarchical_order_adapter.py  test_hierarchical_order_benchmark.py  test_html_edits.py  test_image_source.py  test_joint_graph_benchmark.py  test_native_pdf_images.py  test_opendataloader_provider.py  test_paddle_layout_provider.py  test_paddleocr_vl.py  test_paragraph_graph_benchmark.py  test_pdf_export.py  test_pipeline.py  test_provider_anchor_benchmark.py  test_provider_degradation.py  test_provider_hierarchy_benchmark.py  test_quality.py  test_reading_order.py  test_reading_order_sidecar.py  test_reading_streams.py  test_relation_noise.py  test_relation_order.py  test_relation_ranker.py  test_relation_ranker_benchmark.py  test_roor_benchmark.py  (+7 more)
(+75 files in other folders)
